Web Scraping: Selenium version, browser language & price error 🤔

--- a/scripts/web_scraping.ipynb
+++ b/scripts/web_scraping.ipynb
@@ -30,6 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# %pip install selenium==4.9.0\n",
     "# %pip install helium\n",
     "# %pip install bs4\n",
     "# %pip install pandas\n",
@@ -190,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,15 +223,17 @@
     "    Config.implicit_wait_secs = 30\n",
     "    options = webdriver.FirefoxOptions()\n",
     "    options.preferences[\"permissions.default.geo\"] = 1\n",
+    "    profile = webdriver.FirefoxProfile()\n",
+    "    profile.set_preference('intl.accept_languages', 'en-US, en')\n",
     "    if(URL != None):\n",
-    "        return start_firefox(url=URL, options=options, headless=True)\n",
+    "        return start_firefox(url=URL, options=options, headless=True, profile=profile)\n",
     "    else:\n",
-    "        return start_firefox(options=options, headless=True)"
+    "        return start_firefox(options=options, headless=True, profile=profile)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,18 +261,20 @@
     "            try:\n",
     "                print('Hotel: ' + row[COLUMNS_NAME[0]] + ' - ' + 'Review: ' + str(x+1) + ' - Page: ' + str(page+1))\n",
     "                writer.writerow(row)\n",
-    "            except IOError:\n",
-    "                print(\"I/O error\")\n",
-    "    except:\n",
-    "        print('Error review info')\n"
+    "            except IOError as e:\n",
+    "                print(f\"I/O error\")\n",
+    "    except Exception as e:\n",
+    "        print(f'Error review info: {e}')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import traceback\n",
+    "\n",
     "def get_hotels_by_list(csv_path, column_name, max_review_pages):\n",
     "    hotels_df = pd.read_csv(csv_path)\n",
     "    hotels = hotels_df[column_name].to_list()\n",
@@ -288,7 +293,8 @@
     "            # HOTEL_RATING\n",
     "            row[COLUMNS_NAME[1]] = reviews_soup.find('a', class_=HOTEL_REVIEW).find('span').get('class')[1]\n",
     "            # HOTEL_PRICE\n",
-    "            row[COLUMNS_NAME[2]] = reviews_soup.find('div', class_=HOTEL_PRICE).text\n",
+    "            price_element = reviews_soup.find('div', class_=HOTEL_PRICE)\n",
+    "            row[COLUMNS_NAME[2]] = price_element.text if price_element != None else 'N/A'\n",
     "            # HOTEL_LOCATION\n",
     "            row[COLUMNS_NAME[3]] = reviews_soup.find('span', class_=HOTEL_LOCATION).text\n",
     "            # HOTEL_REVIEW_LINK\n",
@@ -300,12 +306,12 @@
     "                try:\n",
     "                    go_to(ROOT_URL + reviews_soup.find('a', class_=NEXT_BUTTON).get('href'))\n",
     "                    wait_until(lambda: len(browser.page_source) > 0, 60)\n",
-    "                except:\n",
-    "                    print('Max review page')\n",
+    "                except Exception as e:\n",
+    "                    print(f'Max review page')\n",
     "                    break\n",
-    "\n",
-    "        except:\n",
-    "            print('Hotel info error')"
+    "        except Exception as e:\n",
+    "            print(traceback.format_exc())\n",
+    "            print(f'Hotel info error: {e}')"
    ]
   },
   {
@@ -318,11 +324,192 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hotel: Strubel-Roos - Review: 1 - Page: 1\n",
+      "Hotel: Strubel-Roos - Review: 2 - Page: 1\n",
+      "Hotel: Strubel-Roos - Review: 3 - Page: 1\n",
+      "Max review page\n",
+      "Hotel: Belle Maison - Das kleine Hotel - Review: 1 - Page: 1\n",
+      "Hotel: Belle Maison - Das kleine Hotel - Review: 2 - Page: 1\n",
+      "Hotel: Belle Maison - Das kleine Hotel - Review: 3 - Page: 1\n",
+      "Hotel: Belle Maison - Das kleine Hotel - Review: 4 - Page: 1\n",
+      "Hotel: Belle Maison - Das kleine Hotel - Review: 5 - Page: 1\n",
+      "Hotel: Belle Maison - Das kleine Hotel - Review: 6 - Page: 1\n",
+      "Hotel: Belle Maison - Das kleine Hotel - Review: 7 - Page: 1\n",
+      "Hotel: Belle Maison - Das kleine Hotel - Review: 8 - Page: 1\n",
+      "Hotel: Belle Maison - Das kleine Hotel - Review: 9 - Page: 1\n",
+      "Hotel: Belle Maison - Das kleine Hotel - Review: 10 - Page: 1\n",
+      "Hotel: Belle Maison - Das kleine Hotel - Review: 1 - Page: 2\n",
+      "Hotel: Belle Maison - Das kleine Hotel - Review: 2 - Page: 2\n",
+      "Hotel: Belle Maison - Das kleine Hotel - Review: 3 - Page: 2\n",
+      "Hotel: Belle Maison - Das kleine Hotel - Review: 4 - Page: 2\n",
+      "Hotel: Belle Maison - Das kleine Hotel - Review: 5 - Page: 2\n",
+      "Hotel: Belle Maison - Das kleine Hotel - Review: 6 - Page: 2\n",
+      "Max review page\n",
+      "Hotel: Hotel Fiori - Review: 1 - Page: 1\n",
+      "Hotel: Hotel Fiori - Review: 2 - Page: 1\n",
+      "Hotel: Hotel Fiori - Review: 3 - Page: 1\n",
+      "Hotel: Hotel Fiori - Review: 4 - Page: 1\n",
+      "Hotel: Hotel Fiori - Review: 5 - Page: 1\n",
+      "Hotel: Hotel Fiori - Review: 6 - Page: 1\n",
+      "Max review page\n",
+      "Hotel: Hotel Christine - Review: 1 - Page: 1\n",
+      "Hotel: Hotel Christine - Review: 2 - Page: 1\n",
+      "Hotel: Hotel Christine - Review: 3 - Page: 1\n",
+      "Hotel: Hotel Christine - Review: 4 - Page: 1\n",
+      "Hotel: Hotel Christine - Review: 5 - Page: 1\n",
+      "Hotel: Hotel Christine - Review: 6 - Page: 1\n",
+      "Hotel: Hotel Christine - Review: 7 - Page: 1\n",
+      "Hotel: Hotel Christine - Review: 8 - Page: 1\n",
+      "Hotel: Hotel Christine - Review: 9 - Page: 1\n",
+      "Hotel: Hotel Christine - Review: 10 - Page: 1\n",
+      "Hotel: Hotel Christine - Review: 1 - Page: 2\n",
+      "Hotel: Hotel Christine - Review: 2 - Page: 2\n",
+      "Hotel: Hotel Christine - Review: 3 - Page: 2\n",
+      "Hotel: Hotel Christine - Review: 4 - Page: 2\n",
+      "Hotel: Hotel Christine - Review: 5 - Page: 2\n",
+      "Hotel: Hotel Christine - Review: 6 - Page: 2\n",
+      "Hotel: Hotel Christine - Review: 7 - Page: 2\n",
+      "Hotel: Hotel Christine - Review: 8 - Page: 2\n",
+      "Hotel: Hotel Christine - Review: 9 - Page: 2\n",
+      "Hotel: Hotel Christine - Review: 10 - Page: 2\n",
+      "Hotel: Hotel Christine - Review: 1 - Page: 3\n",
+      "Hotel: Hotel Christine - Review: 2 - Page: 3\n",
+      "Hotel: Hotel Christine - Review: 3 - Page: 3\n",
+      "Hotel: Hotel Christine - Review: 4 - Page: 3\n",
+      "Hotel: Hotel Christine - Review: 5 - Page: 3\n",
+      "Hotel: Hotel Christine - Review: 6 - Page: 3\n",
+      "Hotel: Hotel Christine - Review: 7 - Page: 3\n",
+      "Hotel: Hotel Christine - Review: 8 - Page: 3\n",
+      "Hotel: Hotel Christine - Review: 9 - Page: 3\n",
+      "Hotel: Hotel Christine - Review: 10 - Page: 3\n",
+      "Error review info: Message: Browsing context has been discarded\n",
+      "\n",
+      "Hotel: Hotel Christine - Review: 1 - Page: 5\n",
+      "Hotel: Hotel Christine - Review: 2 - Page: 5\n",
+      "Hotel: Hotel Christine - Review: 3 - Page: 5\n",
+      "Hotel: Hotel Christine - Review: 4 - Page: 5\n",
+      "Hotel: Hotel Christine - Review: 5 - Page: 5\n",
+      "Hotel: Hotel Christine - Review: 6 - Page: 5\n",
+      "Hotel: Hotel Christine - Review: 7 - Page: 5\n",
+      "Hotel: Hotel Christine - Review: 8 - Page: 5\n",
+      "Hotel: Hotel Christine - Review: 9 - Page: 5\n",
+      "Hotel: Hotel Christine - Review: 10 - Page: 5\n",
+      "Hotel: Hotel Christine - Review: 1 - Page: 6\n",
+      "Hotel: Hotel Christine - Review: 2 - Page: 6\n",
+      "Hotel: Hotel Christine - Review: 3 - Page: 6\n",
+      "Hotel: Hotel Christine - Review: 4 - Page: 6\n",
+      "Hotel: Hotel Christine - Review: 5 - Page: 6\n",
+      "Hotel: Hotel Christine - Review: 6 - Page: 6\n",
+      "Hotel: Hotel Christine - Review: 7 - Page: 6\n",
+      "Hotel: Hotel Christine - Review: 8 - Page: 6\n",
+      "Hotel: Hotel Christine - Review: 9 - Page: 6\n",
+      "Hotel: Hotel Christine - Review: 10 - Page: 6\n",
+      "Hotel: Hotel Christine - Review: 1 - Page: 7\n",
+      "Hotel: Hotel Christine - Review: 2 - Page: 7\n",
+      "Hotel: Hotel Christine - Review: 3 - Page: 7\n",
+      "Hotel: Hotel Christine - Review: 4 - Page: 7\n",
+      "Hotel: Hotel Christine - Review: 5 - Page: 7\n",
+      "Hotel: Hotel Christine - Review: 6 - Page: 7\n",
+      "Hotel: Hotel Christine - Review: 7 - Page: 7\n",
+      "Hotel: Hotel Christine - Review: 8 - Page: 7\n",
+      "Hotel: Hotel Christine - Review: 9 - Page: 7\n",
+      "Hotel: Hotel Christine - Review: 10 - Page: 7\n",
+      "Hotel: Hotel Christine - Review: 1 - Page: 8\n",
+      "Hotel: Hotel Christine - Review: 2 - Page: 8\n",
+      "Hotel: Hotel Christine - Review: 3 - Page: 8\n",
+      "Hotel: Hotel Christine - Review: 4 - Page: 8\n",
+      "Hotel: Hotel Christine - Review: 5 - Page: 8\n",
+      "Hotel: Hotel Christine - Review: 6 - Page: 8\n",
+      "Hotel: Hotel Christine - Review: 7 - Page: 8\n",
+      "Hotel: Hotel Christine - Review: 8 - Page: 8\n",
+      "Hotel: Hotel Christine - Review: 9 - Page: 8\n",
+      "Hotel: Hotel Christine - Review: 10 - Page: 8\n",
+      "Hotel: Hotel Christine - Review: 1 - Page: 9\n",
+      "Hotel: Hotel Christine - Review: 2 - Page: 9\n",
+      "Hotel: Hotel Christine - Review: 3 - Page: 9\n",
+      "Hotel: Hotel Christine - Review: 4 - Page: 9\n",
+      "Hotel: Hotel Christine - Review: 5 - Page: 9\n",
+      "Hotel: Hotel Christine - Review: 6 - Page: 9\n",
+      "Hotel: Hotel Christine - Review: 7 - Page: 9\n",
+      "Hotel: Hotel Christine - Review: 8 - Page: 9\n",
+      "Hotel: Hotel Christine - Review: 9 - Page: 9\n",
+      "Hotel: Hotel Christine - Review: 10 - Page: 9\n",
+      "Hotel: Hotel Christine - Review: 1 - Page: 10\n",
+      "Hotel: Hotel Christine - Review: 2 - Page: 10\n",
+      "Hotel: Hotel Christine - Review: 3 - Page: 10\n",
+      "Hotel: Hotel Christine - Review: 4 - Page: 10\n",
+      "Hotel: Hotel Christine - Review: 5 - Page: 10\n",
+      "Hotel: Hotel Christine - Review: 6 - Page: 10\n",
+      "Hotel: Hotel Christine - Review: 7 - Page: 10\n",
+      "Hotel: Hotel Christine - Review: 8 - Page: 10\n",
+      "Hotel: Hotel Christine - Review: 9 - Page: 10\n",
+      "Hotel: Hotel Christine - Review: 10 - Page: 10\n",
+      "Error review info: \n",
+      "Max review page\n",
+      "Hotel: Landgasthof Hotel Hanses-Brautigam - Review: 1 - Page: 1\n",
+      "Hotel: Landgasthof Hotel Hanses-Brautigam - Review: 2 - Page: 1\n",
+      "Hotel: Landgasthof Hotel Hanses-Brautigam - Review: 3 - Page: 1\n",
+      "Hotel: Landgasthof Hotel Hanses-Brautigam - Review: 4 - Page: 1\n",
+      "Hotel: Landgasthof Hotel Hanses-Brautigam - Review: 5 - Page: 1\n",
+      "Max review page\n",
+      "Hotel: Hotel Der Wilde Schwan - Review: 1 - Page: 1\n",
+      "Hotel: Hotel Der Wilde Schwan - Review: 2 - Page: 1\n",
+      "Hotel: Hotel Der Wilde Schwan - Review: 3 - Page: 1\n",
+      "Hotel: Hotel Der Wilde Schwan - Review: 4 - Page: 1\n",
+      "Hotel: Hotel Der Wilde Schwan - Review: 5 - Page: 1\n",
+      "Hotel: Hotel Der Wilde Schwan - Review: 6 - Page: 1\n",
+      "Hotel: Hotel Der Wilde Schwan - Review: 7 - Page: 1\n",
+      "Hotel: Hotel Der Wilde Schwan - Review: 8 - Page: 1\n",
+      "Hotel: Hotel Der Wilde Schwan - Review: 9 - Page: 1\n",
+      "Hotel: Hotel Der Wilde Schwan - Review: 10 - Page: 1\n",
+      "Hotel: Hotel Der Wilde Schwan - Review: 1 - Page: 2\n",
+      "Hotel: Hotel Der Wilde Schwan - Review: 2 - Page: 2\n",
+      "Hotel: Hotel Der Wilde Schwan - Review: 3 - Page: 2\n",
+      "Hotel: Hotel Der Wilde Schwan - Review: 4 - Page: 2\n",
+      "Hotel: Hotel Der Wilde Schwan - Review: 5 - Page: 2\n",
+      "Hotel: Hotel Der Wilde Schwan - Review: 6 - Page: 2\n",
+      "Hotel: Hotel Der Wilde Schwan - Review: 7 - Page: 2\n",
+      "Hotel: Hotel Der Wilde Schwan - Review: 8 - Page: 2\n",
+      "Hotel: Hotel Der Wilde Schwan - Review: 9 - Page: 2\n",
+      "Max review page\n",
+      "Hotel: Alte Saege Ruhpolding - Review: 1 - Page: 1\n",
+      "Hotel: Alte Saege Ruhpolding - Review: 2 - Page: 1\n",
+      "Hotel: Alte Saege Ruhpolding - Review: 3 - Page: 1\n",
+      "Hotel: Alte Saege Ruhpolding - Review: 4 - Page: 1\n",
+      "Max review page\n",
+      "Hotel: Hotel LANDHAUSZEIT - Review: 1 - Page: 1\n",
+      "Hotel: Hotel LANDHAUSZEIT - Review: 2 - Page: 1\n",
+      "Hotel: Hotel LANDHAUSZEIT - Review: 3 - Page: 1\n",
+      "Hotel: Hotel LANDHAUSZEIT - Review: 4 - Page: 1\n",
+      "Hotel: Hotel LANDHAUSZEIT - Review: 5 - Page: 1\n",
+      "Hotel: Hotel LANDHAUSZEIT - Review: 6 - Page: 1\n",
+      "Hotel: Hotel LANDHAUSZEIT - Review: 7 - Page: 1\n",
+      "Hotel: Hotel LANDHAUSZEIT - Review: 8 - Page: 1\n",
+      "Hotel: Hotel LANDHAUSZEIT - Review: 9 - Page: 1\n",
+      "Max review page\n",
+      "Hotel: Ellgass Allgau Hotel - Review: 1 - Page: 1\n",
+      "Hotel: Ellgass Allgau Hotel - Review: 2 - Page: 1\n",
+      "Max review page\n"
+     ]
+    }
+   ],
+   "source": [
+    "get_hotels_by_list(INPUT_FOLDER_PATH+BYLIST_HOTELS_INPUT_FILE_NAME, URL_COLUMN_NAME, MAX_REVIEW_PAGES)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_hotels_by_list('../data/tripadvisor_hotels.csv', URL_COLUMN_NAME, MAX_REVIEW_PAGES)\n",
     "file.close()"
    ]
   }
@@ -343,7 +530,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4,
   "vscode": {
