User confirmation for web scraping (Prevent being banned by TripAdvisor) 🤓

--- a/scripts/web_scraping.ipynb
+++ b/scripts/web_scraping.ipynb
@@ -98,6 +98,7 @@
     "MAX_HOTEL_PAGES = 2 # The maximum number of hotel pages that the  script will scrapes. (used in get_hotels_data_by_location() method)\n",
     "MAX_REVIEW_PAGES = 10 # The maximum  number of review pages that the script will scrapes for each hotel. (used in get_hotels_data_by_location(), get_hotels_data_by_search(), and get_hotels_by_list())\n",
     "URL_COLUMN_NAME = 'Tripadvisor' # The name of the column containing the URL of the hotels in the CSV input file. (used in get_hotels_by_list() method)\n",
+    "MAX_SCRAPED_HOTELS = 30 # The maximum number of hotels that the scraped will scrap by batch\n",
     "\n",
     "# Web scraping constants\n",
     "HOTEL_HEADER_INFO = 'UJWmn f k'\n",
@@ -273,12 +274,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import traceback\n",
-    "\n",
     "def get_hotels_by_list(csv_path, column_name, max_review_pages):\n",
     "    hotels_df = pd.read_csv(csv_path)\n",
     "    hotels = hotels_df[column_name].to_list()\n",
     "    browser = start_browser()\n",
+    "\n",
+    "    n_hotel = 0 # Hotel position in batch 0\n",
     "\n",
     "    for x in range(len(hotels)):\n",
     "        try:\n",
@@ -309,8 +310,18 @@
     "                except Exception as e:\n",
     "                    print(f'Max review page')\n",
     "                    break\n",
+    "            \n",
+    "            n_hotel += 1 # Create batch of 5 hotels\n",
+    "            if(n_hotel > MAX_SCRAPED_HOTELS):\n",
+    "                # Wait user input to continue\n",
+    "                cont = input('Continue? (y/n)')\n",
+    "                if(cont.lower() == 'y'):\n",
+    "                    n_hotel = 0\n",
+    "                    continue\n",
+    "                else:\n",
+    "                    break\n",
+    "        \n",
     "        except Exception as e:\n",
-    "            print(traceback.format_exc())\n",
     "            print(f'Hotel info error: {e}')"
    ]
   },
